--- a/MarketplaceWeb/Views/Category/Create.cshtml
+++ b/MarketplaceWeb/Views/Category/Create.cshtml
@@ -6,12 +6,12 @@
             <h2 class="text-primary">Create Category</h2>
         </div>
         <div class="mb-3 row p-1">
-            <label>Category Name</label>
-            <input type="text" class="form-control"/>
+            <label asp-for="Name"></label>
+            <input asp-for="Name" class="form-control"/>
         </div>
         <div class="mb-3 row p-1">
-            <label>Display Order</label>
-            <input type="text" class="form-control" />
+            <label asp-for="DisplayOrder"></label>
+            <input asp-for="DisplayOrder" class="form-control" />
         </div>
         <div class="row">
             <div class="col-6 col-md-3">
