--- a/MarketplaceWeb/Views/Category/Create.cshtml
+++ b/MarketplaceWeb/Views/Category/Create.cshtml
@@ -15,7 +15,6 @@
                 <div class="form-floating py-2 col-12">
                     <input asp-for="Name" class="form-control border-0 shadow"  />
                     <label asp-for="Name" class="ms-2"></label>
-
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-floating py-2 col-12">
@@ -23,7 +22,7 @@
                     <label asp-for="DisplayOrder" class="ms-2"></label>
                     <span asp-validation-for="DisplayOrder" class="text-danger"></span>
                 </div>
-                <div class="row">
+                <div class="row mt-3">
                     <div class="col-6 col-md-3">
                         <button type="submit" class="btn btn-primary form-control">Create</button>
                     </div>
