--- a/MarketplaceWeb/Areas/Admin/Views/_ViewImports.cshtml
+++ b/MarketplaceWeb/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using MarketplaceWeb
 @using MarketplaceWeb.Models
+@using MarketplaceWeb.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
