--- a/MarketplaceWeb/Views/Shared/_Layout.cshtml
+++ b/MarketplaceWeb/Views/Shared/_Layout.cshtml
@@ -64,6 +64,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.tiny.cloud/1/qih93a8ml7xjd9wos6fksukbf9jxwn5emmg4bb2vumzbie1y/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
